--- a/react-SQL/package.json
+++ b/react-SQL/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^7.0.1",
     "react-spinners": "^0.14.1",
     "zustand": "^5.0.1"
